--- a/registry.yaml
+++ b/registry.yaml
@@ -1,5 +1,5 @@
 version: '2.0'
-updated_at: '2026-02-06T03:44:02Z'
+updated_at: '2026-02-08T16:16:17Z'
 tools:
   curl:
     name: curl
@@ -4886,6 +4886,10 @@ tools:
     - screenshot_capture
     - form_interaction
     - spa_testing
+    - captcha_interaction
+    - vision_interaction
+    - human_captcha_solving
+    - vnc_display
     phases:
     - reconnaissance
     - enumeration
@@ -4924,6 +4928,15 @@ tools:
       - payload validation
       - verify XSS callback
       - check cookie exfiltration
+      - CAPTCHA
+      - captcha solving
+      - captcha screenshot
+      - image captcha
+      - text captcha
+      - grid captcha
+      - reCAPTCHA
+      - slider captcha
+      - click captcha images
       never_use_for:
       - simple API request
       - file download
@@ -4939,6 +4952,8 @@ tools:
       - screenshot
       - empty body
       - page returns empty
+      - captcha
+      - CAPTCHA
       prefer_over:
       - curl
     warnings:
@@ -4949,6 +4964,15 @@ tools:
       Use for: login forms, JavaScript-rendered content, web app testing.
 
       Prefer over curl when pages return empty bodies or require JS rendering.
+
+
+      VNC/noVNC: The browser runs headed on a virtual display with VNC access.
+
+      Users can see and interact with the browser at http://localhost:6080/vnc.html
+
+      This enables human CAPTCHA solving — the agent navigates to the page,
+
+      then the user connects via VNC to solve the CAPTCHA directly.
 
 
       WHEN TO USE PLAYWRIGHT vs CURL:
@@ -4992,11 +5016,24 @@ tools:
         when_to_use: Before interacting with elements - returns refs needed for click/type/etc
         params: {}
       browser_take_screenshot:
-        description: Capture visual screenshot of the page
+        description: Capture visual screenshot of the page or a specific element
+        when_to_use: Capture page state, CAPTCHA images, or element-level screenshots for vision analysis
         params:
           filename:
             type: string
             description: Optional filename to save
+          element:
+            type: string
+            description: Human description of element to screenshot
+          ref:
+            type: string
+            description: Element ref from browser_snapshot for element-level screenshot
+          fullPage:
+            type: boolean
+            description: 'Capture full scrollable page (default: viewport only)'
+          type:
+            type: string
+            description: 'Image format: png (default) or jpeg'
       browser_click:
         description: Click on an element using ref from snapshot
         params:
@@ -5179,6 +5216,53 @@ tools:
             type: string
             required: true
             description: Ref of element to drop onto
+      browser_mouse_click_xy:
+        description: Click at exact x,y coordinates on the page (vision mode)
+        when_to_use: Click CAPTCHA grid cells, image regions, or elements without accessible refs
+        params:
+          x:
+            type: integer
+            required: true
+            description: X coordinate in pixels
+          y:
+            type: integer
+            required: true
+            description: Y coordinate in pixels
+          button:
+            type: string
+            description: 'Mouse button: left (default), right, middle'
+      browser_mouse_move_xy:
+        description: Move mouse to exact x,y coordinates (vision mode)
+        when_to_use: Hover over CAPTCHA elements, position cursor before clicking
+        params:
+          x:
+            type: integer
+            required: true
+            description: X coordinate in pixels
+          y:
+            type: integer
+            required: true
+            description: Y coordinate in pixels
+      browser_mouse_drag_xy:
+        description: Drag from one x,y coordinate to another (vision mode)
+        when_to_use: Solve slider CAPTCHAs, drag-and-drop puzzles
+        params:
+          startX:
+            type: integer
+            required: true
+            description: Start X coordinate
+          startY:
+            type: integer
+            required: true
+            description: Start Y coordinate
+          endX:
+            type: integer
+            required: true
+            description: End X coordinate
+          endY:
+            type: integer
+            required: true
+            description: End Y coordinate
       browser_install:
         description: Install browser if not present (usually not needed - Chrome pre-installed)
         params: {}
