fix: add workflow file to CI paths trigger

--- a/.github/workflows/registry-publish.yaml
+++ b/.github/workflows/registry-publish.yaml
@@ -7,6 +7,7 @@ on:
       - 'tools/*/tool.yaml'
       - 'scripts/build-registry.py'
       - 'scripts/build-registry-lance.py'
+      - '.github/workflows/registry-publish.yaml'
   workflow_dispatch:
 
 permissions:
