fix: use FlagEmbedding FP16 for BGE-M3 embeddings in registry build

--- a/.github/workflows/registry-publish.yaml
+++ b/.github/workflows/registry-publish.yaml
@@ -31,7 +31,9 @@ jobs:
           key: bge-m3-model-v1
 
       - name: Install dependencies
-        run: pip install pyyaml lancedb sentence-transformers pyarrow
+        run: |
+          pip install torch==2.2.0 --extra-index-url https://download.pytorch.org/whl/cpu
+          pip install pyyaml lancedb pyarrow FlagEmbedding==1.2.10
 
       - name: Build registry.yaml and registry.sha256
         run: python scripts/build-registry.py
