--- a/.github/workflows/registry-publish.yaml
+++ b/.github/workflows/registry-publish.yaml
@@ -32,8 +32,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install torch==2.2.0 --extra-index-url https://download.pytorch.org/whl/cpu
-          pip install pyyaml lancedb pyarrow FlagEmbedding==1.2.10
+          pip install torch --extra-index-url https://download.pytorch.org/whl/cpu
+          pip install pyyaml lancedb pyarrow "FlagEmbedding==1.2.10"
 
       - name: Build registry.yaml and registry.sha256
         run: python scripts/build-registry.py
