--- a/.github/workflows/registry-publish.yaml
+++ b/.github/workflows/registry-publish.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install torch --extra-index-url https://download.pytorch.org/whl/cpu
-          pip install pyyaml lancedb pyarrow "FlagEmbedding==1.2.10"
+          pip install pyyaml lancedb pyarrow FlagEmbedding
 
       - name: Build registry.yaml and registry.sha256
         run: python scripts/build-registry.py
